force-app/main/default/objects/Opportunity/fields/Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account URL</label>
    <type>Text</type>
</CustomField>