force-app/main/default/objects/Opportunity/fields/ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatus__c</fullName>
    <description>This represents Membership application status and is displayed in membership portal. When New Business Membership Opportunity is created  
Default status = Application Received
When Docusign is initiated set status= Waiting for Customer Signature
When Docusign is signed by customer and waiting for LF signature status=Waiting for Linux Foundation Signature
When Docusign is complete and opportunity is still open status = Waiting to Close by PM
When Docusign is voided status= Application Received
When opportunity is closed won status= Complete
When opportunity is closed lost status= Cancelled</description>
    <inlineHelpText>This status is displayed in membership portal. Reach out to platform service for any changes</inlineHelpText>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received</fullName>
                <default>true</default>
                <label>Application Received</label>
            </value>
            <value>
                <fullName>Waiting for Customer Signature</fullName>
            </value>
            <value>
                <fullName>Waiting for Linux Foundation Signature</fullName>
            </value>
            <value>
                <fullName>Waiting to Close by PM</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Application in Review</fullName>
                <isActive>false</isActive>
                <label>Application in Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>