force-app/main/default/objects/Opportunity/fields/Asset_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Sales_Order_Number__c</fullName>
    <inlineHelpText>This is valid for Event Record Types Only.</inlineHelpText>
    <label>Asset Sales Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>