force-app/main/default/objects/Opportunity/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Decision maker has been assigned in the opportunity contact role</inlineHelpText>
    <label>Authority</label>
    <type>Checkbox</type>
</CustomField>