force-app/main/default/objects/Opportunity/fields/Authorized_Signatory_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_Contact_Email__c</fullName>
    <label>Authorized Signatory Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>