force-app/main/default/objects/Opportunity/fields/Authorized_Signatory_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_Contact_Name__c</fullName>
    <description>used to capture Authorized Signatory Contact name from membership role for reporting</description>
    <label>Authorized Signatory Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>