force-app/main/default/objects/Opportunity/fields/Auto_Close_Error__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Error__c</fullName>
    <label>Auto Close Error</label>
    <type>TextArea</type>
</CustomField>