force-app/main/default/objects/Opportunity/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the membership/sponsorship/training items are to be billed to an Account other than the receiving Account.</description>
    <inlineHelpText>If the membership/sponsorship/training items are to be billed to an Account other than the receiving Account.</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>