force-app/main/default/objects/Opportunity/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Use if bill to address is different from Account Name billing Address. You can find addresses under Bill to Name and Address under Account</inlineHelpText>
    <label>Bill to Name and address</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_To_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>