force-app/main/default/objects/Opportunity/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description>used to capture Billing Contact email from membership role for reporting</description>
    <label>Billing Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>