force-app/main/default/objects/Opportunity/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <description>used to capture Billing Contact name from membership role for reporting</description>
    <label>Billing Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>