force-app/main/default/objects/Opportunity/fields/Billing_Contact_URL__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Billing_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact URL</label>
    <type>Text</type>
</CustomField>