force-app/main/default/objects/Opportunity/fields/Billing_To__c.field-meta.xml
<CustomField>
    <fullName>Billing_To__c</fullName>
    <formula>Billing_To_Account_Name__c + BR() +
Billing_To_Addr_Line_1__c + BR() +
Billing_To_Addr_Line_2__c + BR() +
Billing_To_Addr_Line_3__c</formula>
    <inlineHelpText>To choose a different Bill To Name and Address, use the &quot;Alternate Bill To Name and Address&quot; pane at the bottom-left of this page.</inlineHelpText>
    <label>Billing To</label>
    <type>Text</type>
</CustomField>