force-app/main/default/objects/Opportunity/fields/Billing_To_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Account_Name__c</fullName>
    <formula>IF(
   ISBLANK(Bill_To_Address__c),
   IF(
      ISBLANK(Bill_To_Account__c),
      Account.Name,
      Bill_To_Account__r.Name
     ),
   Bill_To_Address__r.Name
  )</formula>
    <label>Billing To Account Name</label>
    <type>Text</type>
</CustomField>