force-app/main/default/objects/Opportunity/fields/Billing_To_Addr_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Addr_Line_1__c</fullName>
    <formula>IF(
   ISBLANK(Bill_To_Address__c),
   IF(
      ISBLANK(Bill_To_Account__c),
      Account.BillingStreet,
      Bill_To_Account__r.BillingStreet
     ),
   Bill_To_Address__r.Street__c
  )</formula>
    <label>Billing To Addr Line 1</label>
    <type>Text</type>
</CustomField>