force-app/main/default/objects/Opportunity/fields/Billing_To_Addr_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Addr_Line_2__c</fullName>
    <formula>IF(
   ISBLANK(Bill_To_Address__c),

   IF(
      ISBLANK(Bill_To_Account__c),

      Account.BillingCity + &quot;, &quot; +
      Account.BillingState + &quot; &quot; +
      Account.BillingPostalCode,

      Bill_To_Account__r.BillingCity + &quot;, &quot; + 
      Bill_To_Account__r.BillingState + &quot; &quot; + 
      Bill_To_Account__r.BillingPostalCode
     ),

   Bill_To_Address__r.City__c + &quot;, &quot; + 
   Bill_To_Address__r.State__c + &quot; &quot; + 
   Bill_To_Address__r.Zip_Postal_Code__c
  )</formula>
    <label>Billing To Addr Line 2</label>
    <type>Text</type>
</CustomField>