force-app/main/default/objects/Opportunity/fields/Billing_To_Addr_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Addr_Line_3__c</fullName>
    <formula>IF(
   ISBLANK(Bill_To_Address__c),
   IF(
      ISBLANK(Bill_To_Account__c),
      Account.BillingCountry,
      Bill_To_Account__r.BillingCountry
     ),
   Bill_To_Address__r.Country__c
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing To Addr Line 3</label>
    <type>Text</type>
</CustomField>