force-app/main/default/objects/Opportunity/fields/Billing_To_Help__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Help__c</fullName>
    <description>The only purpose of this field is to display instructions on the page layout.  It should never be included in any reports.</description>
    <formula>&quot;Scroll down to the \&quot;Alternate Bill To Name and Address\&quot; pane at the bottom-left of this page.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Documentation available at tinyurl.com/billto</inlineHelpText>
    <label>Need to change Billing To?</label>
    <type>Text</type>
</CustomField>