force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget_CFY</fullName>
                <label>Budget in current FY</label>
            </value>
            <value>
                <fullName>Budget_NFY</fullName>
                <label>Budget in next FY</label>
            </value>
            <value>
                <fullName>Unsure of budget status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>