force-app/main/default/objects/Opportunity/fields/Buying_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Buying_Time_Frame__c</fullName>
    <label>Buying Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 3 Months</fullName>
            </value>
            <value>
                <fullName>3 - 6 Months</fullName>
            </value>
            <value>
                <fullName>6 - 12 Months</fullName>
            </value>
            <value>
                <fullName>Greater Than 12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>