force-app/main/default/objects/Opportunity/fields/Company_Type_Needs_Verified__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_Needs_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Type Needs Verified</label>
    <type>Checkbox</type>
</CustomField>