force-app/main/default/objects/Opportunity/fields/Corporate_Training_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Training_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Training Bundle</label>
    <type>Checkbox</type>
</CustomField>