force-app/main/default/objects/Opportunity/fields/Date_to_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Call_Back__c</fullName>
    <label>Date to Call Back</label>
    <type>Date</type>
</CustomField>