force-app/main/default/objects/Opportunity/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>IF(JoinNow_Update__c  &lt;&gt; null,DATETIMEVALUE( CloseDate ) - DATETIMEVALUE(  JoinNow_Update__c ) + 1 , DATETIMEVALUE( CloseDate ) - DATETIMEVALUE( CreatedDate ) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>