force-app/main/default/objects/Opportunity/fields/Employee_Count_Needs_Verified__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Needs_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Count Needs Verified</label>
    <type>Checkbox</type>
</CustomField>