force-app/main/default/objects/Opportunity/fields/Engagement_Period__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Period__c</fullName>
    <label>Engagement Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>