force-app/main/default/objects/Opportunity/fields/Engagement_Terms__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Terms__c</fullName>
    <label>Engagement Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>