force-app/main/default/objects/Opportunity/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>TextArea</type>
</CustomField>