force-app/main/default/objects/Opportunity/fields/Events_Email_Notification_Fired__c.field-meta.xml
<CustomField>
    <fullName>Events_Email_Notification_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a reporting field to validate the events email notification successfully fired.</description>
    <label>Events Email Notification Fired</label>
    <type>Checkbox</type>
</CustomField>