force-app/main/default/objects/Opportunity/fields/First_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Product_Name__c</fullName>
    <label>First Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>