force-app/main/default/objects/Opportunity/fields/First_Product_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Product_Year__c</fullName>
    <label>First Product Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>