force-app/main/default/objects/Opportunity/fields/First_Project_Event_Training_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Project_Event_Training_Name__c</fullName>
    <label>First Project/Event/Training Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>