force-app/main/default/objects/Opportunity/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting PO</fullName>
            </value>
            <value>
                <fullName>Verbal Confirmation Required</fullName>
            </value>
            <value>
                <fullName>Other (add comment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>