force-app/main/default/objects/Opportunity/fields/Hold_User__c.field-meta.xml
<CustomField>
    <fullName>Hold_User__c</fullName>
    <label>Hold User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>