force-app/main/default/objects/Opportunity/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if Opportunity is for Individual Member and not a corpoate</inlineHelpText>
    <label>Individual</label>
    <type>Checkbox</type>
</CustomField>