force-app/main/default/objects/Opportunity/fields/Invoice_Only_Opp__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Only_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Only Opp</label>
    <type>Checkbox</type>
</CustomField>