force-app/main/default/objects/Opportunity/fields/IsSpam__c.field-meta.xml
<CustomField>
    <fullName>IsSpam__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if it is a spam opportunity</inlineHelpText>
    <label>Is Spam</label>
    <type>Checkbox</type>
</CustomField>