force-app/main/default/objects/Opportunity/fields/Join_Now_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Join_Now_Company_Type__c</fullName>
    <label>Join Now Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>