force-app/main/default/objects/Opportunity/fields/JoinNow_Update__c.field-meta.xml
<CustomField>
    <fullName>JoinNow_Update__c</fullName>
    <label>JoinNow Update</label>
    <type>Date</type>
</CustomField>