force-app/main/default/objects/Opportunity/fields/Last_Opportunity_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Activity__c</fullName>
    <formula>LastActivityDate</formula>
    <label>Last Opportunity Activity</label>
    <type>Date</type>
</CustomField>