force-app/main/default/objects/Opportunity/fields/Last_Touched__c.field-meta.xml
<CustomField>
    <fullName>Last_Touched__c</fullName>
    <formula>TODAY() -  LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Touched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>