force-app/main/default/objects/Opportunity/fields/LastLeadSource__c.field-meta.xml
<CustomField>
    <fullName>LastLeadSource__c</fullName>
    <description>NEW Field</description>
    <label>Last Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Last_Lead_Source</valueSetName>
    </valueSet>
</CustomField>