force-app/main/default/objects/Opportunity/fields/LastLeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>LastLeadSourceDetail__c</fullName>
    <inlineHelpText>NEW Field</inlineHelpText>
    <label>Last Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LastLeadSource__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Last_Lead_Source_Detail</valueSetName>
    </valueSet>
</CustomField>