force-app/main/default/objects/Opportunity/fields/LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDetail__c</fullName>
    <label>Lead Source Detail_NA</label>
    <type>TextArea</type>
</CustomField>