force-app/main/default/objects/Opportunity/fields/LF_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>LF_Product_Count__c</fullName>
    <label>LF Product Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Project__c</field>
        <operation>equals</operation>
        <value>The Linux Foundation</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>