force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Firm Acquired</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>No Engagement</fullName>
            </value>
            <value>
                <fullName>Non payment</fullName>
            </value>
            <value>
                <fullName>Org Change/Lost Champion or Funding</fullName>
            </value>
            <value>
                <fullName>Perceived Value</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Reissued</fullName>
            </value>
            <value>
                <fullName>Solution Fit</fullName>
            </value>
            <value>
                <fullName>SPAM Opportunity</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>