force-app/main/default/objects/Opportunity/fields/MC_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Opportunity_ID__c</fullName>
    <formula>(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Opportunity ID</label>
    <type>Text</type>
</CustomField>