force-app/main/default/objects/Opportunity/fields/Membership_Doc_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>Membership_Doc_Download_URL__c</fullName>
    <description>Contains Fully Executed Membership Document Download URL</description>
    <label>Membership Doc Download URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>