force-app/main/default/objects/Opportunity/fields/Membership_Product_Voting_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Membership_Product_Voting_Contacts__c</fullName>
    <label>Membership Product Voting Contacts</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Membership_Voting_Contact_Roles__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>