force-app/main/default/objects/Opportunity/fields/NetSuite_Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice_Memo__c</fullName>
    <label>NetSuite Invoice Memo</label>
    <type>TextArea</type>
</CustomField>