force-app/main/default/objects/Opportunity/fields/No_of_Planned_Olis__c.field-meta.xml
<CustomField>
    <fullName>No_of_Planned_Olis__c</fullName>
    <label>No of Planned OLIs</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Project_Event_Status__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>