force-app/main/default/objects/Opportunity/fields/OLI_Count_without_Start_date_as_First__c.field-meta.xml
<CustomField>
    <fullName>OLI_Count_without_Start_date_as_First__c</fullName>
    <label>OLI Count without Start date as First</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.OLIs_without_start_date_as_first_date__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>