force-app/main/default/objects/Opportunity/fields/Opp_Owner_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Current_User__c</fullName>
    <description>If Opportunity Owner ID = Current User ID, then checkbox = TRUE</description>
    <formula>OwnerId =  $User.Id</formula>
    <label>Opp Owner Current User?</label>
    <type>Checkbox</type>
</CustomField>