force-app/main/default/objects/Opportunity/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <inlineHelpText>The Opportunities area of your SWOT</inlineHelpText>
    <label>Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>