force-app/main/default/objects/Opportunity/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>