force-app/main/default/objects/Opportunity/fields/Opportunity_PO_Required__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_PO_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity PO Required</label>
    <type>Checkbox</type>
</CustomField>