force-app/main/default/objects/Opportunity/fields/Opportunity_Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Power_of_One__c</fullName>
    <formula>1</formula>
    <label>Opportunity Power of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>