force-app/main/default/objects/Opportunity/fields/Original_Renewal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Renewal_Amount__c</fullName>
    <label>Original Renewal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>