force-app/main/default/objects/Opportunity/fields/Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Source__c</fullName>
    <label>Original Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification Registration</fullName>
            </value>
            <value>
                <fullName>Compliance Directory</fullName>
            </value>
            <value>
                <fullName>Created Manually</fullName>
            </value>
            <value>
                <fullName>CreatedManually</fullName>
            </value>
            <value>
                <fullName>Event Incomplete Registration</fullName>
            </value>
            <value>
                <fullName>Event Registration</fullName>
            </value>
            <value>
                <fullName>Individual Membership</fullName>
            </value>
            <value>
                <fullName>Linux.com Store</fullName>
            </value>
            <value>
                <fullName>List Import</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Training Incomplete Registration</fullName>
            </value>
            <value>
                <fullName>Training Registration</fullName>
            </value>
            <value>
                <fullName>Training Self Assessment</fullName>
            </value>
            <value>
                <fullName>Training Student Survey</fullName>
            </value>
            <value>
                <fullName>Travel Fund Requester</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Finos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>